--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.5.1",
     "@nestjs/jwt": "^7.1.0",
-    "@nestjs/mongoose": "^7.0.2",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.5.1",
+    "@typegoose/typegoose": "^7.4.2",
+    "@types/mongoose": "^5.10.1",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
@@ -37,6 +38,7 @@
     "jwt-decode": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.10.13",
+    "nestjs-typegoose": "^7.1.38",
     "nodemailer": "^6.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -55,7 +57,6 @@
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/jwt-decode": "^2.2.1",
-    "@types/mongoose": "^5.7.37",
     "@types/node": "^14.14.6",
     "@types/passport-google-oauth20": "^2.0.4",
     "@types/passport-jwt": "^3.0.3",
